[tool.poetry]
name = "hw"
version = "0.1"
description = "-"
authors = ["Dmytro Klymenko <klimenko.dmitris@gmail.com>"]
license = "Mit License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
jupyter = "^1.0.0"
notebook = "^7.0.6"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
